Updating build script